# palworld-server

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  entrypoint.sh  partialstrace  renovate.json  run-local.sh  run_local.sh  server.cfg  shell.sh  steamapps.bzl  update-steamapps.sh
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  publish.yml  renovate.yml  test.yml  update.yml
