load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_tarball")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")

pkg_tar(
    name = "palworld_server",
    srcs = ["@palworld_dedicated_server//:files"],
    package_dir = "/opt/palworld",
    modes = {"/Pal/Binaries/Linux/PalServer-Linux-Shipping": "0755"} ,
    symlinks = {"/opt/palworld/Pal/Binaries/Linux/steamclient.so":"/opt/palworld/linux64/steamclient.so"}
)

oci_image(
    name = "image",
    base = "@debian",
    entrypoint = ["/opt/palworld/Pal/Binaries/Linux/PalServer-Linux-Shipping", "Pal"],
    env = {},
    target_compatible_with = ["@platforms//os:linux"],
    tars = [
        ":palworld_server",
    ],
)

build_test(
    name = "image_test",
    targets = [":image"],
)

oci_tarball(
    name = "image_tarball",
    image = ":image",
    repo_tags = ["palworld-server:bazel"],
)

oci_push(
    name = "image_push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "ghcr.io/kleinpa/palworld-server",
)

platform(
    name = "linux_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)
