load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//:steamapps.bzl", "BUILD_palworld_dedicated_server")

pkg_tar(
    name = "palworld_server",
    srcs = ["@palworld_dedicated_server//:files"],
    modes = {"/Pal/Binaries/Linux/PalServer-Linux-Shipping": "0755"},
    package_dir = "/opt/palworld",
    symlinks = {"/opt/palworld/Pal/Binaries/Linux/steamclient.so": "/opt/palworld/linux64/steamclient.so"},
)

oci_image(
    name = "image",
    base = "@palworld-server-debian",
    entrypoint = [
        "/opt/palworld/Pal/Binaries/Linux/PalServer-Linux-Shipping",
        "Pal",
    ],
    tars = [":palworld_server"],
)

build_test(
    name = "image_test",
    targets = [":image"],
)

oci_load(
    name = "image_tarball",
    image = ":image",
    repo_tags = ["palworld-server:bazel"],
)

oci_push(
    name = "image_push",
    image = ":image",
    remote_tags = [
        "latest",
        "build{}".format(BUILD_palworld_dedicated_server),
    ],
    repository = "ghcr.io/kleinpa/palworld-server",
)
