module(name = "palworld-server")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_steam")

git_override(
    module_name = "rules_steam",
    commit = "c4a061ca4f11e308399fe8474da205f69b390ae9",
    remote = "https://github.com/lanofdoom/rules_steam.git",
)

steamapps = use_extension("//:steamapps.bzl", "steamapps_bzlmod")
use_repo(steamapps, "palworld_dedicated_server")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "palworld-server-debian",
    image = "docker.io/library/debian",
    platforms = ["linux/amd64"],
    digest = "sha256:fe7312b5f05bf5f43fad76bcd8945642e4e47a68aefd1b73f447615899d0fac1",
)
use_repo(oci, "palworld-server-debian", "palworld-server-debian_linux_amd64")
