module(name = "palworld-server")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_steam")

git_override(
    module_name = "rules_steam",
    commit = "b33eac1637a6f89d557d2be7c4fdb6c2a01b8b9d",
    remote = "https://github.com/lanofdoom/rules_steam.git",
)

steamapps = use_extension("//:steamapps.bzl", "steamapps_bzlmod")
use_repo(steamapps, "palworld_dedicated_server")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "palworld-server-debian",
    image = "docker.io/library/debian",
    platforms = ["linux/amd64"],
    digest = "sha256:d07d1b51c39f51188e60be9b64e6bf769fa94e187f092bc32b91305cfa34ba5a",
)
use_repo(oci, "palworld-server-debian", "palworld-server-debian_linux_amd64")
