module(name = "palworld-server")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_steam")

git_override(
    module_name = "rules_steam",
    commit = "ccecbe78ef784a62bf269f965a30fb69921f99ce",
    remote = "https://github.com/lanofdoom/rules_steam.git",
)

steamapps = use_extension("//:steamapps.bzl", "steamapps_bzlmod")
use_repo(steamapps, "palworld_dedicated_server")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "palworld-server-debian",
    image = "docker.io/library/debian",
    platforms = ["linux/amd64"],
    digest = "sha256:fac46bff2e02f51425b6e33b0e1169f55dfb053d83511ca28aa50c09fd5ed7a4",
)
use_repo(oci, "palworld-server-debian", "palworld-server-debian_linux_amd64")
